// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Functions autocomplete autocomplete simple snapshot with =S 1`] = `
<div
  class="o-autocomplete-dropdown bg-white"
>
  <div
    class="d-flex flex-column text-start o-autocomplete-value-focus"
  >
    <div
      class="d-flex align-items-center gap-2"
    >
      
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color:#9B359B; "
        >
          S
        </span>
        <span
          style=""
        >
          UM
        </span>
        
      </div>
    </div>
    <div
      class="o-autocomplete-description text-truncate"
    >
      do sum
    </div>
    
  </div>
  <div
    class="d-flex flex-column text-start"
  >
    <div
      class="d-flex align-items-center gap-2"
    >
      
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color:#9B359B; "
        >
          S
        </span>
        <span
          style=""
        >
          ZZ
        </span>
        
      </div>
    </div>
    
  </div>
  
</div>
`;

exports[`composer Assistant render above the cell when not enough place below 1`] = `
<div
  class="o-composer-assistant overflow-auto"
  style="max-height:141px; width:300px; min-width:96px; "
>
  
  
  <div
    class="o-autocomplete-dropdown bg-white"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            UM
          </span>
          
        </div>
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            ZZ
          </span>
          
        </div>
      </div>
      
    </div>
    
  </div>
  
</div>
`;

exports[`composer Assistant render below the cell by default 1`] = `
<div
  class="o-composer-assistant overflow-auto"
  style="max-height:327px; width:300px; min-width:96px; "
>
  
  
  <div
    class="o-autocomplete-dropdown bg-white"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            UM
          </span>
          
        </div>
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="d-flex align-items-center gap-2"
      >
        
        <div
          class="o-autocomplete-value text-truncate"
        >
          <span
            class="o-semi-bold"
            style="color:#9B359B; "
          >
            S
          </span>
          <span
            style=""
          >
            ZZ
          </span>
          
        </div>
      </div>
      
    </div>
    
  </div>
  
</div>
`;
